baml_language/crates/baml_tests/snapshots/parser_stress/baml_tests__parser_stress__02_parser__very_invalid.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "BodyTorture"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let x = ¿;"
          KW_LET "let"
          WORD "x"
          EQUALS "="
          ERROR_TOKEN "¿"
          SEMICOLON ";"
        WHILE_STMT
          KW_WHILE "while"
          ERROR_TOKEN "\"
          BLOCK_EXPR
            L_BRACE "{"
            BINARY_EXPR "x += 1"
              WORD "x"
              PLUS_EQUALS "+="
              INTEGER_LITERAL "1"
            SEMICOLON ";"
            R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
Error: Expected expression, found Error
   ╭─[ very_invalid.baml:6:11 ]
   │
 6 │   let x = ¿;
   │           ─┬  
   │            ╰── Expected expression, found Error
   │ 
   │ Note: Error code: E0010
───╯

Error: Expected expression, found Error
   ╭─[ very_invalid.baml:8:10 ]
   │
 8 │   while \ {
   │          ┬  
   │          ╰── Expected expression, found Error
   │ 
   │ Note: Error code: E0010
───╯
